@@ -26,6 +26,8 @@
 #
 #-------------------------------------------------------------------------
 import os
+import logging
+log = logging.getLogger(".")
 
 #-------------------------------------------------------------------------
 #
@@ -617,15 +619,12 @@ def report(dbstate,uistate,person,report_class,options_class,
     elif category == CATEGORY_DRAW:
         from _DrawReportDialog import DrawReportDialog
         dialog_class = DrawReportDialog
-    elif category == CATEGORY_BOOK:
+    elif category in (CATEGORY_BOOK,CATEGORY_CODE,CATEGORY_VIEW,CATEGORY_WEB):
         try:
             report_class(dbstate,uistate,person)
         except Errors.WindowActiveError:
             pass
         return        
-    elif category in (CATEGORY_VIEW,CATEGORY_CODE,CATEGORY_WEB):
-        report_class(dbstate.db,person)
-        return
     else:
         dialog_class = ReportDialog
 
